// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HueTable.vue should render a table 1`] = `
<table
  class="hue-table"
>
  <thead>
    <tr
      class="header-row"
    >
      <th>
        <div
          class="cell-content"
        >
          A
        </div>
      </th>
      <th>
        <div
          class="cell-content"
        >
          D
        </div>
      </th>
      <th>
        <div
          class="cell-content"
        >
          C
        </div>
      </th>
      <th>
        <div
          class="cell-content"
        >
          B
        </div>
      </th>
    </tr>
  </thead>
   
  <tbody>
    <tr>
      <td>
        <div
          class="cell-content"
        >
          
            1
          
        </div>
      </td>
      <td>
        <div
          class="cell-content"
        >
          
            
          
        </div>
      </td>
      <td>
        <div
          class="cell-content"
        >
          
            false
          
        </div>
      </td>
      <td>
        <div
          class="cell-content"
        >
          
            5
          
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div
          class="cell-content"
        >
          
            2
          
        </div>
      </td>
      <td>
        <div
          class="cell-content"
        >
          
            
          
        </div>
      </td>
      <td>
        <div
          class="cell-content"
        >
          
            true
          
        </div>
      </td>
      <td>
        <div
          class="cell-content"
        >
          
            6
          
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div
          class="cell-content"
        >
          
            3
          
        </div>
      </td>
      <td>
        <div
          class="cell-content"
        >
          
            
          
        </div>
      </td>
      <td>
        <div
          class="cell-content"
        >
          
            false
          
        </div>
      </td>
      <td>
        <div
          class="cell-content"
        >
          
            7
          
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div
          class="cell-content"
        >
          
            4
          
        </div>
      </td>
      <td>
        <div
          class="cell-content"
        >
          
            
          
        </div>
      </td>
      <td>
        <div
          class="cell-content"
        >
          
            true
          
        </div>
      </td>
      <td>
        <div
          class="cell-content"
        >
          
            8
          
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`HueTable.vue should render a table with a custom component for a cell 1`] = `
<table
  class="hue-table"
>
  <thead>
    <tr
      class="header-row"
    >
      <th>
        <div
          class="cell-content"
        >
          A
        </div>
      </th>
      <th>
        <div
          class="cell-content"
        >
          B
        </div>
      </th>
    </tr>
  </thead>
   
  <tbody>
    <tr>
      <td>
        <div
          class="cell-content"
        >
          <div>
            3
          </div>
        </div>
      </td>
      <td>
        <div
          class="cell-content"
        >
          
            2
          
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div
          class="cell-content"
        >
          <div>
            9
          </div>
        </div>
      </td>
      <td>
        <div
          class="cell-content"
        >
          
            5
          
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`HueTable.vue should render a table with adapter 1`] = `
<table
  class="hue-table"
>
  <thead>
    <tr
      class="header-row"
    >
      <th>
        <div
          class="cell-content"
        >
          A
        </div>
      </th>
      <th>
        <div
          class="cell-content"
        >
          B + C
        </div>
      </th>
    </tr>
  </thead>
   
  <tbody>
    <tr>
      <td>
        <div
          class="cell-content"
        >
          
            1
          
        </div>
      </td>
      <td>
        <div
          class="cell-content"
        >
          
            14
          
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div
          class="cell-content"
        >
          
            2
          
        </div>
      </td>
      <td>
        <div
          class="cell-content"
        >
          
            16
          
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div
          class="cell-content"
        >
          
            3
          
        </div>
      </td>
      <td>
        <div
          class="cell-content"
        >
          
            18
          
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div
          class="cell-content"
        >
          
            4
          
        </div>
      </td>
      <td>
        <div
          class="cell-content"
        >
          
            20
          
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;
